# luminary

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG_UNCHANGED_LINES.md  Dockerfile  GUIDE_WRITING_STRONG_PROMPTS.md  QUICK_START.md  README.md  ROADMAP.md  SIMPLIFICATIONS.md  STAGE1_COMPLETE.md  STAGE2_COMPLETE.md  STAGE3_COMPLETE.md  STAGE3_VERIFICATION.md  integration.md  pyproject.toml
.github/workflows/: build_and_publish.yml
docs/: ARCHITECTURE_SUMMARY.md  MCP_MIGRATION_AGENT_PLAN.md  RELIABILITY_SCALABILITY_IMPROVEMENTS.md  validation-strategy-recommendations.md
docs/ADR/: 0001-architecture-overview.md  0002-file-processing-strategy.md  0003-llm-provider-architecture.md  0004-comment-validation-strategy.md  0005-context-management.md  0006-technical-stack.md  0007-configuration-management.md  0008-edge-cases-handling.md  0009-comment-format.md
examples/: .ai-reviewer.yml  ai-reviewer-config-code-context-rest.yml  ai-reviewer-config-java.yml  ai-reviewer-config-no-code-context.yml  ai-reviewer-config-qwen.yml  gitlab-ci-example.yml  sample_code.py  sample_diff.diff
src/luminary/: __init__.py  cli.py
src/luminary/application/: __init__.py  mr_review_service.py  review_service.py
tests/: __init__.py  test_cli.py  test_code_context_retriever.py  test_config_validation.py  test_gitlab_client.py  test_http_client_retry.py  test_llm_provider_factory.py  test_mock_provider.py  test_mr_review_service_integration.py  test_prompt_contracts.py  test_retry_policy.py  test_review_service.py  test_review_service_features.py  test_unchanged_lines.py
(+42 files in other folders)
